--- a/index.html
+++ b/index.html
@@ -242,35 +242,35 @@
 
     <!-- Contact -->
     <!-- <section id="contact" class="pt-36 pb-32">
-        <div class="container">
-            <div class="w-full px-4">
-                <div class="max-w-xl mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-3 sm:text-4xl lg:text-5xl">Segera Hubungi</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam nemo culpa mollitia.</p>
-                </div>
-                <form>
-                    <div class="w-full lg:W-2/3 lg:mx-auto">
-                        <div class="w-full px-4 mb-8">
-                            <label for="name" class="text-base text-primary font-bold">Nama</label>
-                            <input type="text" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focur:border-primary" />
-                        </div>
-                        <div class="w-full px-4 mb-8">
-                            <label for="email" class="text-base text-primary font-bold">Email</label>
-                            <input type="email" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focur:border-primary" />
-                        </div>
-                        <div class="w-full px-4 mb-8">
-                            <label for="pesan" class="text-base text-primary font-bold">Pesan</label>
-                            <textarea type="email" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focur:border-primary h-32"></textarea>
-                        </div>
-                        <div class="w-full px-4">
-                            <button class="w-full text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:opacity-80 hover:shadow-lg transition duration-500">Kirim</button>
-                        </div>
+            <div class="container">
+                <div class="w-full px-4">
+                    <div class="max-w-xl mx-auto text-center mb-16">
+                        <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
+                        <h2 class="font-bold text-dark text-3xl mb-3 sm:text-4xl lg:text-5xl">Segera Hubungi</h2>
+                        <p class="font-medium text-md text-secondary md:text-lg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente quibusdam nemo culpa mollitia.</p>
                     </div>
-                </form>
+                    <form>
+                        <div class="w-full lg:W-2/3 lg:mx-auto">
+                            <div class="w-full px-4 mb-8">
+                                <label for="name" class="text-base text-primary font-bold">Nama</label>
+                                <input type="text" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focur:border-primary" />
+                            </div>
+                            <div class="w-full px-4 mb-8">
+                                <label for="email" class="text-base text-primary font-bold">Email</label>
+                                <input type="email" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focur:border-primary" />
+                            </div>
+                            <div class="w-full px-4 mb-8">
+                                <label for="pesan" class="text-base text-primary font-bold">Pesan</label>
+                                <textarea type="email" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focur:border-primary h-32"></textarea>
+                            </div>
+                            <div class="w-full px-4">
+                                <button class="w-full text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:opacity-80 hover:shadow-lg transition duration-500">Kirim</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
-    </section> -->
+        </section> -->
     <!-- End Contact -->
 
     <!-- Footer -->
@@ -300,7 +300,7 @@
                     <h3 class="font-semibold text-xl text-white mb-5">Tautan</h3>
                     <ul class="text-slate-300">
                         <li>
-                            <a href="#beranda" class="inline-block text-base hover:text-primary mb-3">Beranda</a>
+                            <a href="#home" class="inline-block text-base hover:text-primary mb-3">Beranda</a>
                         </li>
                         <li>
                             <a href="#about" class="inline-block text-base hover:text-primary mb-3">Tentang Saya</a>
