--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
         <div class="flex items-center justify-center mb-5">
           <!-- Instagram -->
           <a
-            href="https://instagram.com/aditya_.dharma"
+            href="https://www.instagram.com/adityaadharmaa/"
             target="_blank"
             class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
           >
