--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="flex items-center">
               <!-- Instagram -->
               <a
-                href="https://instagram.com/aditya_.dharma"
+                href="https://instagram.com/adityaadharmaa"
                 target="_blank"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
