--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                   <a
                     href="#home"
                     class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
-                    >Beranda</a
+                    >Home</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#about"
                     class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
-                    >Tentang Saya</a
+                    >About Me</a
                   >
                 </li>
                 <li class="group">
@@ -79,13 +79,13 @@
                     >Skills</a
                   >
                 </li>
-                <li class="group">
+                <!-- <li class="group">
                   <a
                     href="#blog"
                     class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
                     >Blog</a
                   >
-                </li>
+                </li> -->
                 <!-- <li class="group">
                                 <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Contact</a>
                             </li> -->
@@ -119,7 +119,7 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center py-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">
-              Halo Semua 🙋‍♂️, Saya
+              Hello Everyone 🙋‍♂️, I am
               <span
                 class="block font-bold text-slate-900 text-4xl mt-1 lg:text-5xl dark:text-white"
                 >Aditya Dharma</span
@@ -129,17 +129,17 @@
               Junior Backend Developer
             </h2>
             <p class="font-semibold text-secondary mb-10 leading-relaxed">
-              Motivasi tanpa aksi hanyalah
+              Motivation without action is just
               <span class="font-bold text-dark dark:text-white"
-                >halusinasi
+                >hallucination
               </span>
               ✌️
             </p>
 
             <a
-              href="#"
+              href="mailto:gedeagusadityadharma@gmail.com"
               class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
-              >Segera Hubungi</a
+              >Contact Me</a
             >
           </div>
 
@@ -179,16 +179,15 @@
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
             <h4 class="font-bold uppercase text-primary text-lg mb-3">
-              Tentang Saya
+              About Me
             </h4>
             <h2
               class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl dark:text-white"
             >
-              Lorem ipsum dolor sit amet consectetur.
+              Passionate About Coding and Technology.
             </h2>
             <p class="font-medium text-base text-secondary max-w-xl">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Temporibus perferendis ad in illum ipsa animi ipsum!
+              As a dedicated Junior Backend Developer, I thrive on solving complex problems and creating efficient, scalable solutions. With a background in computer science and a passion for continuous learning, I aim to contribute to innovative projects and grow alongside the technology industry.
             </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
@@ -198,13 +197,13 @@
               Social Media
             </h3>
             <p class="font-medium text-base text-secondary mb-6 lg:text-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
-              aliquam fugiat laudantium veritatis! Saepe, laborum soluta.
+              Connect with me on social media to follow my journey, see my latest projects, and interact with my content. and my personal experiences in the tech world.
+            </p>
             </p>
             <div class="flex items-center">
               <!-- Instagram -->
               <a
-                href="https://instagram.com/aditya_.dharma"
+                href="https://instagram.com/adityaadharmaa"
                 target="_blank"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -300,12 +299,10 @@
             <h2
               class="font-bold text-dark text-3xl mb-3 sm:text-4xl lg:text-5xl dark:text-white"
             >
-              Project Terbaru
+              Recent Projects
             </h2>
             <p class="font-medium text-md text-secondary md:text-lg">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit
-              totam animi vel nostrum dolor itaque maxime laboriosam sint odit
-              ratione.
+              Here are some of the recent projects I've worked on, showcasing my skills and experience in backend development and full-stack projects. These projects highlight my ability to create efficient, scalable, and maintainable code.
             </p>
           </div>
         </div>
@@ -397,12 +394,10 @@
             <h2
               class="font-bold text-white text-3xl mb-3 sm:text-4xl lg:text-5xl dark:text-dark"
             >
-              Skill Yang Saya Kuasai
+              Technical Skills
             </h2>
             <p class="font-medium text-md text-secondary md:text-lg">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit
-              totam animi vel nostrum dolor itaque maxime laboriosam sint odit
-              ratione.
+              Here are some of the technical skills I have acquired through my education and professional experience. These skills enable me to develop high-quality software solutions.
             </p>
           </div>
         </div>
@@ -446,7 +441,7 @@
     <!-- End Skills -->
 
     <!-- Blog -->
-    <section id="blog" class="pt-36 pb-32 bg-slate-100 dark:bg-slate-800">
+    <!-- <section id="blog" class="pt-36 pb-32 bg-slate-100 dark:bg-slate-800">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
@@ -549,7 +544,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Blog -->
 
     <!-- Contact -->
@@ -586,15 +581,16 @@
     <!-- End Contact -->
 
     <!-- Footer -->
-    <footer class="bg-dark pt-24 pb-12">
+     <!-- <hr class="backgrount-slate-500"> -->
+    <footer class="bg-dark pt-24 pb-12 border-t border-slate-700">
       <div class="container">
-        <div class="flex flex-wrap">
-          <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/3">
+        <div class="flex text-center">
+          <div class="w-full px-4 mb-12 text-slate-300 font-medium ">
             <h2 class="font-bold text-4xl text-white mb-5">DITS</h2>
-            <h3 class="font-bold text-2xl mb-2">Hubungi Saya</h3>
+            <h3 class="font-bold text-2xl mb-2">Contact Me</h3>
             <p>gedeagusadityadharma@gmail.com</p>
           </div>
-          <div class="w-full px-4 mb-12 md:w-1/3">
+          <!-- <div class="w-full px-4 mb-12 md:w-1/3">
             <h3 class="font-semibold text-xl text-white mb-5">Ketegori Blog</h3>
             <ul class="text-slate-300">
               <li>
@@ -619,22 +615,22 @@
                 >
               </li>
             </ul>
-          </div>
-          <div class="w-full px-4 mb-12 md:w-1/3">
-            <h3 class="font-semibold text-xl text-white mb-5">Tautan</h3>
+          </div> -->
+          <!-- <div class="w-full px-4 mb-12 md:w-1/3">
+            <h3 class="font-semibold text-xl text-white mb-5">Link</h3>
             <ul class="text-slate-300">
               <li>
                 <a
                   href="#home"
                   class="inline-block text-base hover:text-primary mb-3"
-                  >Beranda</a
+                  >Home</a
                 >
               </li>
               <li>
                 <a
                   href="#about"
                   class="inline-block text-base hover:text-primary mb-3"
-                  >Tentang Saya</a
+                  >About Me</a
                 >
               </li>
               <li>
@@ -659,7 +655,7 @@
                 >
               </li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -746,7 +742,7 @@
           </a>
         </div>
         <p class="font-medium text-xs text-slate-500 text-center">
-          Dibuat Menggunakan
+          Created using
           <a
             href="https://tailwindcss.com"
             target="_blank"
