--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
               <!-- tiktok -->
               <a
-                href="https://tiktok.com/@adityadharmaaaa"
+                href="https://tiktok.com/@ddittss"
                 target="_blank"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -723,7 +723,7 @@
 
           <!-- tiktok -->
           <a
-            href="https://tiktok.com/@adityadharmaaaa"
+            href="https://tiktok.com/@ddittss"
             target="_blank"
             class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
           >
