belum jadi juga

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
                 </li>
                 <li class="group">
                   <a
+                    href="#education"
+                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
+                    >Education</a
+                  >
+                </li>
+                <li class="group">
+                  <a
                     href="#portfolio"
                     class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
                     >Portfolio</a
@@ -187,7 +194,7 @@
               Passionate About Coding and Technology.
             </h2>
             <p class="font-medium text-base text-secondary max-w-xl">
-              As a dedicated Junior Backend Developer, I thrive on solving complex problems and creating efficient, scalable solutions. With a background in computer science and a passion for continuous learning, I aim to contribute to innovative projects and grow alongside the technology industry.
+              I am an active student enrolled in the D4 Software Engineering program at Bali State Polytechnic, currently in the sixth semester of the Class of 2021. I possess a diverse range of expertise in web development, including UX/UI design using Figma, front-end development (HTML, CSS, and JavaScript), as well as back-end development utilizing PHP, JavaScript, and frameworks like CodeIgniter, Laravel, and MySQL for database design. Additionally, I am proficient in soft skills such as project management and communication. I demonstrate a strong interest and talent in back-end and software development, particularly in website development.
             </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
@@ -197,7 +204,7 @@
               Social Media
             </h3>
             <p class="font-medium text-base text-secondary mb-6 lg:text-lg">
-              Connect with me on social media to follow my journey, see my latest projects, and interact with my content. and my personal experiences in the tech world.
+              Connect with me on social media to follow my journey, get a glimpse into my daily life, and interact with my content. Stay updated with my personal experiences and passions beyond the tech world.
             </p>
             </p>
             <div class="flex items-center">
@@ -287,10 +294,60 @@
     </section>
     <!-- End About -->
 
+    <!-- Education -->
+    <section
+      id="education"
+      class="pt-36 pb-16 bg-slate-100 dark:bg-slate-300"
+    >
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="max-w-3xl mx-auto text-center mb-16">
+            <h4 class="font-semibold text-lg text-primary mb-2">Education</h4>
+            <h2
+              class="font-bold text-dark text-3xl mb-3 sm:text-4xl lg:text-5xl dark:text-dark"
+            >
+              My Education
+            </h2>
+            <p class="font-medium text-md text-secondary md:text-lg">
+              Here is my educational journey that has shaped my skills and knowledge in backend development. This experience has prepared me to create efficient, scalable, and maintainable code.
+            </p>
+          </div>
+        </div>
+
+        <div class="flex flex-col lg:flex-row justify-center items-center min-h-screen gap-4 lg:gap-x-3">
+          <div class="bg-white max-w-md rounded-md">
+            <img src="dist/img/poltekbg.png" alt="Logo poltek" />
+            <div class="p-6">
+              <div class="flex justify-between items-center mb-2">
+                <h4 class="text-gray-900 text-2xl font-medium mb-0">
+                  Politeknik Negeri Bali
+                </h4>
+                <p class="text-gray-500 text-sm">2021 - Present</p>
+              </div>
+              <p class="text-gray-700 text-base mb-4">Software Engineering</p>
+            </div>
+          </div>
+          <div class="bg-white max-w-md rounded-md">
+            <img src="dist/img/smkti.png" alt="Logo SMK TI" class=""/>
+            <div class="p-6">
+              <div class="flex justify-between items-center mb-2">
+                <h4 class="text-gray-900 text-2xl font-medium mb-0">
+                  SMKTI Bali Global
+                </h4>
+                <p class="text-gray-500 text-sm">2018 - 2021</p>
+              </div>
+              <p class="text-gray-700 text-base mb-4">Software Engineering</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Education -->
+
     <!-- Portfolio -->
     <section
       id="portfolio"
-      class="pt-36 pb-16 bg-slate-100 dark:bg-slate-800 dark:text-primary"
+      class="pt-36 pb-16 dark:bg-slate-800 dark:text-primary"
     >
       <div class="container">
         <div class="w-full px-4">
@@ -311,7 +368,7 @@
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img
-                src="https://placehold.co/600x400"
+                src="dist/img/DongengPustaka.png"
                 alt="Project 1"
                 width="w-full"
               />
@@ -319,17 +376,16 @@
             <h3
               class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white"
             >
-              Landing Page Aditya
+              Dongeng Pustaka
             </h3>
             <p class="font-medium text-base text-secondary">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-              atque ut. Nam?
+              Dongeng Pustaka is a simple project made by us as a measure of our understanding of the programming language that we have learned, not only that, this website is a free platform for those of you who like traditional stories from Indonesia, for children and adults.
             </p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img
-                src="https://placehold.co/600x400"
+                src="./dist/img/Reservasi.png"
                 alt="Project 1"
                 width="w-full"
               />
@@ -337,47 +393,10 @@
             <h3
               class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white"
             >
-              Landing Page Aditya
+              Hotel Reservation
             </h3>
             <p class="font-medium text-base text-secondary">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-              atque ut. Nam?
-            </p>
-          </div>
-          <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img
-                src="https://placehold.co/600x400"
-                alt="Project 1"
-                width="w-full"
-              />
-            </div>
-            <h3
-              class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white"
-            >
-              Landing Page Aditya
-            </h3>
-            <p class="font-medium text-base text-secondary">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-              atque ut. Nam?
-            </p>
-          </div>
-          <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img
-                src="https://placehold.co/600x400"
-                alt="Project 1"
-                width="w-full"
-              />
-            </div>
-            <h3
-              class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white"
-            >
-              Landing Page Aditya
-            </h3>
-            <p class="font-medium text-base text-secondary">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
-              atque ut. Nam?
+              The Simparis Hotel Reservation System is designed to provide users with a seamless and luxurious experience when booking their stay. The website offers an intuitive interface that combines elegance with user-friendliness, ensuring that guests can easily navigate through options and make reservations effortlessly.
             </p>
           </div>
         </div>
@@ -433,6 +452,12 @@
               class="max-w-[160px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8"
             >
               <img src="dist/img/skills/mysql.svg" alt="MySql Logo" />
+            </a>
+            <a
+              href="#"
+              class="max-w-[160px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8"
+            >
+              <img src="dist/img/skills/php.svg" alt="PHP Logo" />
             </a>
           </div>
         </div>
