--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="flex items-center px-4">
           <button id="hamburger" name="hamburger" type="button" class="block absolute right-4 lg:hidden">
             <span class="hamburger-line transition-transform duration-300 ease-in-out origin-top-left"></span>
-            <span class="hamburger-line transition-transform duration-300 ease-in-out ease-in-out"></span>
+            <span class="hamburger-line transition-transform duration-300 ease-in-out"></span>
             <span
-              class="hamburger-line transition-transform duration-300 ease-in-out ease-in-out origin-bottom-left"></span>
+              class="hamburger-line transition-transform duration-300 ease-in-out origin-bottom-left"></span>
           </button>
           <nav id="nav-menu"
             class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none lg:font-semibold dark:bg-dark dark:shadow-slate-500 lg:dark:bg-transparent">
@@ -629,7 +629,7 @@
 
   <!-- Kembali Ke Atas -->
   <a href="#home"
-    class="hidden fixed z-[999] justify-center items-center bottom-4 p-4 right-4 h-14 w-14 bg-primary block rounded-full hover:animate-pulse"
+    class="hidden fixed z-[999] justify-center items-center bottom-4 p-4 right-4 h-14 w-14 bg-primary rounded-full hover:animate-pulse"
     id="to-top">
     <span class="block w-5 h-5 border-t-2 border-l-2 rotate-45 mt-2"></span>
   </a>
