--- a/index.html
+++ b/index.html
@@ -216,9 +216,7 @@
             My Education
           </h2>
           <p class="font-medium text-md text-secondary md:text-lg">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab quisquam animi unde explicabo et cum doloribus
-            repellat laborum, rem earum nostrum impedit expedita. Veritatis placeat ducimus reprehenderit temporibus
-            officiis quae.
+            Here is my educational journey that has shaped my skills and knowledge in backend development. This experience has prepared me to create efficient, scalable, and maintainable code.
           </p>
         </div>
       </div>
