--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="dist/css/final.css" />
-  <title>PORTFOLIO</title>
+  <title>Portofolio Aditya Dharma</title>
   <script>
     if (
       localStorage.theme === "dark" ||
